[Library] Visual bug on Firefox/Safari for categories in side navigation (#913)
- sets an explicit transparency for accordion buttons in the aside so the browser default isn't taken

--- a/examples/ui.apps/src/content/jcr_root/apps/core-components-examples/clientlibs/clientlib-site/styles/components/accordion.less
+++ b/examples/ui.apps/src/content/jcr_root/apps/core-components-examples/clientlibs/clientlib-site/styles/components/accordion.less
@@ -39,6 +39,7 @@
         font-size: @cmp-examples-font-size-s;
         font-weight: @cmp-examples-font-weight-bold;
         color: @cmp-examples-color-gray-800;
+        background-color: transparent;
 
         &:hover {
             background-color: @cmp-examples-color-gray-200;
